buildscript {

    ext {
        jUnitVersion='5.6.0'
        mockitoVersion='3.3.3'
        assertJVersion='3.24.2'
        approvalsVersion='23.1.0'
    }

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'

    dependencies {
        testImplementation "org.junit.jupiter:junit-jupiter-api:$jUnitVersion"
        testImplementation "org.junit.jupiter:junit-jupiter-engine:$jUnitVersion"
        testImplementation "org.mockito:mockito-junit-jupiter:$mockitoVersion"
        testImplementation "org.assertj:assertj-core:$assertJVersion"
        testImplementation "org.junit.jupiter:junit-jupiter-params:$jUnitVersion"
        testImplementation "com.approvaltests:approvaltests:$approvalsVersion"
    }

    group 'tech.pathtoprogramming'
    version '1.0-SNAPSHOT'

    sourceCompatibility = 17

    test {
        useJUnitPlatform()
        testLogging {
            events "passed", "skipped", "failed"
        }
    }
}